testcases/error/invalid_embed.veryl
module invalid_embed {
    embed (inline) py{{{
    }}}
}
